white gap fix attemot no 18

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body, html{
     margin: 0;
     padding: 0;
     min-height: -webkit-fill-available;
-    background: linear-gradient(to bottom, #eaf2ff,#ffffff,#1a3a6f);
+    background-image: url(daviddesignsBackground.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
